# Credit-Fraud-Model-Eval-using-MCP

./: Review_Checklist.xlsx  main.py  main_banking fraud transaction detection-checkpoint.ipynb  main_fraud.ipynb  pyproject.toml
mlruns/0/: meta.yaml
mlruns/616483229949026516/: meta.yaml
mlruns/616483229949026516/08061d23f31b4d1981433f200ed21462/: meta.yaml
mlruns/616483229949026516/0807cd720af64f668cb176afa32ad2d0/: meta.yaml
mlruns/616483229949026516/09e67a61bf0544848bfd3194717f3a3a/: meta.yaml
mlruns/616483229949026516/0d957012a44a406b9fdd7920c6501634/: meta.yaml
mlruns/616483229949026516/10ea5877ccc641c7ba01bc66958a058d/: meta.yaml
mlruns/616483229949026516/22b246a15b794309bc3c9b93df60f721/: meta.yaml
mlruns/616483229949026516/241a241680a24942a69aabefe80de42b/: meta.yaml
mlruns/616483229949026516/29a914d8f4ad488c83cbab6b81bb7356/: meta.yaml
mlruns/616483229949026516/2ca5437e3ed543b9a06c743f1711602a/: meta.yaml
mlruns/616483229949026516/2f33554385914f4a857c1f21559d66e2/: meta.yaml
mlruns/616483229949026516/322fccb098ea4d52af262425f01f75b8/: meta.yaml
mlruns/616483229949026516/34287bc742784a6fbcbab8732a016ec6/: meta.yaml
mlruns/616483229949026516/37b4994312354c8686fe5a85be64f4a4/: meta.yaml
mlruns/616483229949026516/39431febbb3342edaa0a61d267cd6f0c/: meta.yaml
mlruns/616483229949026516/403c3f3267b040268c4b657d88fcef0f/: meta.yaml
mlruns/616483229949026516/4198c58ef80949fb8c295a015860554e/: meta.yaml
mlruns/616483229949026516/41a4ec529ee047eba4f656fc4d19c736/: meta.yaml
(+947 files in other folders)
