[project]
name = "mcpcrit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12" 
dependencies = [
    "imblearn==0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.2",
    "mlflow>=3.1.0",
    "nbformat>=5.10.4", # Keep this as is for now, we'll see if TF is happy
    "numpy==1.25.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn==1.3.0", # This will install the latest 1.3.x or 1.2.x version
    "seaborn>=0.13.2",
    "tensorflow>=2.17.1",
]
